application/site/public/theme/mobile/css/default.css
/* ... */
.breadcrumb {
  padding: 0;
  margin: 0;
  list-style: none; }
  .breadcrumb li {
    display: inline-block;
    text-shadow: 0 1px 0 #fff;
    *display: inline;
    *zoom: 1; }
    .breadcrumb li .divider {
      color: #ccc; }
  .breadcrumb .active {
    color: #999; }
  .breadcrumb li::first-letter {
    text-transform: uppercase; }

.button {
  padding: 4px 12px;
  margin-bottom: 0;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  border: 1px solid #ccc;
  background-color: #fff; }
  .button:hover, .button:focus, .button:active, .button.active, .button.disabled, .button[disabled], .button.pseudo-class-hover, .button.pseudo-class-active, .button.pseudo-class-disabled {
    background-color: #eee;
    border-color: #b3b3b3; }
  .button:hover, .button.pseudo-class-hover, .button:focus, .button:active, .button.pseudo-class-active {
    text-decoration: none;
    background-position: 0 -15px;
    -webkit-transition: background-position 0.1s linear;
    -moz-transition: background-position 0.1s linear;
    -o-transition: background-position 0.1s linear;
    transition: background-position 0.1s linear; }
  .button:focus {
    outline: thin dotted #333;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px; }
  .button.disabled, .button[disabled], .button.pseudo-class-disabled {
    cursor: default;
    background-image: none;
    opacity: 0.65;
    filter: alpha(opacity=65);
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none; }

button.button, input[type="submit"].button {
  *padding-top: 3px;
  *padding-bottom: 3px; }
  button.button::-moz-focus-inner, input[type="submit"].button::-moz-focus-inner {
    padding: 0;
    border: 0; }

.button--link, .button--link:active, .button--link[disabled] {
  background-color: transparent;
  background-image: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none; }

.button--link {
  border-color: transparent;
  cursor: pointer;
  color: #004D9F;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0; }

.button--link:hover, .button--link:focus {
  color: #002852;
  text-decoration: underline;
  background-color: transparent;
  border-color: transparent; }

.button--link[disabled]:hover, .button--link[disabled]:focus {
  color: #333;
  text-decoration: none; }

.button--primary {
  border: 1px solid #002d5d;
  background-color: #0054ae;
  color: #fff; }
  .button--primary:hover, .button--primary:focus, .button--primary:active, .button--primary.active, .button--primary.disabled, .button--primary[disabled], .button--primary.pseudo-class-hover, .button--primary.pseudo-class-active, .button--primary.pseudo-class-disabled {
    color: #fff;
    background-color: #006bdc;
    border-color: #002d5d; }

.button--hamburger {
  float: right;
  padding: 5px 12px;
  color: #004D9F;
  text-decoration: none;
  text-align: center;
  border: 1px solid #004895;
  border-radius: 8px;
  background-color: #fff; }
  .button--hamburger:after {
    display: inline-block;
    font-size: 30px;
    content: '\2630';
    vertical-align: text-bottom;
    padding-left: 6px; }

@media screen and (orientation: landscape), screen and (orientation: portrait) {
  .button--hamburger:hover {
    text-decoration: none; }
 }

@media (max-width: 768px) {
  .button--hamburger:after {
    content: "";
    content: none; }

  .button--hamburger {
    cursor: pointer;
    user-select: none; }
    .button--hamburger:hover {
      opacity: 1; }
    .button--hamburger:active {
      transition: 0; }
    .button--hamburger .lines {
      position: relative;
      top: -5px; }
      .button--hamburger .lines, .button--hamburger .lines:before, .button--hamburger .lines:after {
        display: inline-block;
        width: 0.9375em;
        height: 0.1339285714em;
        background: #004D9F;
        border-radius: 0.0669642857em;
        transition: 0.4s; }
      .button--hamburger .lines:before, .button--hamburger .lines:after {
        position: absolute;
        left: 0;
        content: '';
        -webkit-transform-origin: 0.0669642857em center;
        transform-origin: 0.0669642857em center; }
      .button--hamburger .lines:before {
        top: 0.2678571429em; }
      .button--hamburger .lines:after {
        top: -0.2678571429em; }
    .button--hamburger.close .lines {
      background: transparent; }
      .button--hamburger.close .lines:before, .button--hamburger.close .lines:after {
        -webkit-transform-origin: 50% 50%;
        transform-origin: 50% 50%;
        top: 0;
        width: 0.9375em; }
      .button--hamburger.close .lines:before {
        -webkit-transform: rotate3d(0, 0, 1, 45deg);
        transform: rotate3d(0, 0, 1, 45deg); }
      .button--hamburger.close .lines:after {
        -webkit-transform: rotate3d(0, 0, 1, -45deg);
        transform: rotate3d(0, 0, 1, -45deg); }
 }

.cards {
  list-style: none;
  margin: 0;
  padding: 0; }

.card {
  text-align: center;
  margin-bottom: 1.5em; }
  .card img {
    border-radius: 4px 4px 0 0;
    border-bottom: 1px solid #f6f6f6; }
  .card a {
    display: inline-block;
    border: 1px solid #eee;
    border-radius: 4px; }
  .card a:hover, .card a:focus {
    color: #002852;
    background-color: #ebf3f4;
    border-color: #004D9F;
    -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
    -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
    box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25); }
    .card a:hover img, .card a:focus img {
      border-bottom: 1px solid #e1edee; }

.card__metadata {
  display: block;
  padding: 0.75em;
  width: 100%;
  display: table; }

.card__metadata--inner {
  display: table-cell;
  vertical-align: middle; }

.card__name {
  text-decoration: underline;
  margin-bottom: 0.375em;
  display: block; }

.card__date, .card__place {
  display: block;
  color: #222; }
/* ... */

